[gd_scene load_steps=6 format=3 uid="uid://binwdhgeo342d"]

[ext_resource type="Script" uid="uid://rlibt55nhm08" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://23x56kh4p5xh" path="res://scenes/intro.tscn" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://bbb0nefifrnmp" path="res://scenes/game.tscn" id="3_jyhfs"]
[ext_resource type="AudioStream" uid="uid://bk8ya2poerypg" path="res://sound/music/Intro moins vite.wav" id="4_jyhfs"]
[ext_resource type="AudioStream" uid="uid://b3sj87mah44yb" path="res://sound/music/Compter les loups.wav" id="5_tbgi4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")
intro_scene = ExtResource("2_sugp2")
game_scene = ExtResource("3_jyhfs")

[node name="SoundPool" type="Node" parent="."]

[node name="IntroAudioStreamPlayer" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("4_jyhfs")

[node name="GameAudioStreamPlayer" type="AudioStreamPlayer" parent="SoundPool"]
stream = ExtResource("5_tbgi4")
